# koog-sample

./: .gitignore  README.md
koog/: README.md
koog/app/: build.gradle.kts
koog/app/src/main/kotlin/org/example/: App.kt  Application.kt  DataTypes.kt  KtorConfiguration.kt  PdfService.kt  RecipeEntity.kt  ResultDisplayer.kt  Tool.kt
koog/app/src/main/resources/templates/: index.ftl
koog/kmp-chat/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
koog/kmp-chat/iosApp/iosApp/: ChatViewModel.swift  ContentView.swift  EnvironmentLoader.swift  Info.plist
koog/kmp-chat/iosApp/iosApp.xcodeproj/: project.pbxproj
koog/kmp-chat/iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
koog/kmp-chat/src/commonMain/kotlin/chat/: ChatManager.kt  ChatModels.kt  OpenAiChatClient.kt
kotlin/: .gitignore
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/org/example/: App.kt  PdfService.kt  RecipeEntity.kt
langchain/: .gitignore  README.md  __init__.py  cooking_tools.py  main.py  pdf_service.py  pyproject.toml  recipe_types.py  result_displayer.py
langchain-4j/: README.md  build.gradle.kts  settings.gradle.kts
langchain-4j/src/main/kotlin/org/example/: Main.kt  PdfService.kt  RecipeEntity.kt  ResultDisplayer.kt  Tool.kt  WorkflowDataTypes.kt
mastra/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mastra/src/: index.ts  pdf-service.ts  result-displayer.ts  tools.ts  types.ts
